# Debates

./: .dockerignore  .gitignore  README.md  TODO  cut_audio.py  debate_downloader.py  download_all_debates.py  process_debates.py  pyproject.toml  test_debate.txt  test_debate_large.txt  test_debate_turbo.txt  testaudio.txt  transcribe_all.py  transcribe_audio.py
.cursor/rules/: agent-identity.mdc  use-logging.mdc
data/: test_filtered.csv  test_sentences.csv
data/benchmark/: README.md
data/links/: debates_unified.csv  leg25.csv  legislativas_debates_2025.csv  presidencial_debates_2026.csv
data/scripts/: leg25.py  pre26.py
data/transcripts/: 2025-11-17_André Ventura-vs-António José Seguro_TVI_clip_50s_base.txt
docker/: .env.example  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  test.sh
pipeline/: README.md  __init__.py  config.py  debate_metadata.py  logging_config.py  punctuation_restore.py  requirements.txt  segment_merger.py  sentence_buffer.py  utils.py
pipeline/server/: __init__.py  __main__.py  app.py  audio_handler.py
pipeline/server/static/: app.js  index.html
pipeline/src/: __init__.py  __main__.py  audio_stream.py  main.py  transcriber.py
scripts/: benchmark_transcription.py  chunk_to_sentences.py  cut_audio.py  debate_downloader.py  download_all_debates.py  migrate_links_to_unified.py  test_first_debate.py  test_whisperx_load.py  transcribe_audio.py
tests/: test_first_debate.py  test_whisperx_load.py
