[project]
name = "debates"
version = "0.1.0"
description = "Script to extract debate audio from CNN Portugal videos"
requires-python = ">=3.8"
dependencies = [
    "playwright>=1.40.0",
    "yt-dlp>=2024.0.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "openai-whisper>=20231117",
    "librosa>=0.10.0",
    "tqdm>=4.65.0",
    "pydub>=0.25.1",
    "pyannote.audio>=3.1.0",
]

